--- a/standable/production.yml
+++ b/standable/production.yml
@@ -25,7 +25,7 @@ east-webservers
 west-dbservers
 east-dbservers
 
-# everything in the west geo
+# everything in west geo
 [west:children]
 west-webservers
 west-dbservers
